added my 2ed repo

--- a/index2.html
+++ b/index2.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my 2 repo</title>
+    <link rel="stylesheet" href="m2w/webrepo.css".css">
 </head>
 <body>
-    
+    <div>
+        <h2>my first website yo</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, dolor explicabo. Quos, dignissimos facere omnis hic voluptas delectus sit iure, ratione maiores repellat quaerat, enim sunt harum laudantium fugit deleniti?</p>
+    </div>
 </body>
 </html>
