--- a/index2.html
+++ b/index2.html
@@ -11,5 +11,13 @@
         <h2>my first website yo</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, dolor explicabo. Quos, dignissimos facere omnis hic voluptas delectus sit iure, ratione maiores repellat quaerat, enim sunt harum laudantium fugit deleniti?</p>
     </div>
+    <div>
+        <h2>my 2 website yo</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, dolor explicabo. Quos, dignissimos facere omnis hic voluptas delectus sit iure, ratione maiores repellat quaerat, enim sunt harum laudantium fugit deleniti?</p>
+    </div>
+    <div>
+        <h2>my 3 website yo</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, dolor explicabo. Quos, dignissimos facere omnis hic voluptas delectus sit iure, ratione maiores repellat quaerat, enim sunt harum laudantium fugit deleniti?</p>
+    </div>
 </body>
 </html>
