added a list in my web

--- a/index2.html
+++ b/index2.html
@@ -19,5 +19,13 @@
         <h2>my 3 website yo</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, dolor explicabo. Quos, dignissimos facere omnis hic voluptas delectus sit iure, ratione maiores repellat quaerat, enim sunt harum laudantium fugit deleniti?</p>
     </div>
+    <div>
+        <h3>how to push code to github</h3>
+            <ol>
+                <li>1st git add .</li>
+                <li>2ed git commit -m"any meaning of code"</li>
+                <li>3ed git push</li>
+            </ol>
+    </div>
 </body>
 </html>
