added cat with a meo meo

--- a/index2.html
+++ b/index2.html
@@ -27,5 +27,9 @@
                 <li>3ed git push</li>
             </ol>
     </div>
+    <div>
+        <h3>meo meo meo tumi ki meo</h3>
+        <img src="image/images.jpg" alt="">
+    </div>
 </body>
 </html>
